crates/atlas-runtime/tests/snapshots/parser_tests__array_index.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Index:
            target:
              Identifier:
                name: arr
                span:
                  start: 0
                  end: 3
            index:
              Literal:
                - Number: 0
                - start: 4
                  end: 5
            span:
              start: 0
              end: 6
        span:
          start: 0
          end: 7
