crates/atlas-runtime/tests/snapshots/parser_tests__array_with_elements.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          ArrayLiteral:
            elements:
              - Literal:
                  - Number: 1
                  - start: 1
                    end: 2
              - Literal:
                  - Number: 2
                  - start: 4
                    end: 5
              - Literal:
                  - Number: 3
                  - start: 7
                    end: 8
            span:
              start: 0
              end: 9
        span:
          start: 0
          end: 10
