crates/atlas-runtime/tests/snapshots/parser_tests__bool_false.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Literal:
            - Bool: false
            - start: 0
              end: 5
        span:
          start: 0
          end: 6
