crates/atlas-runtime/tests/snapshots/parser_tests__bool_true.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Literal:
            - Bool: true
            - start: 0
              end: 4
        span:
          start: 0
          end: 5
