crates/atlas-runtime/tests/snapshots/parser_tests__break_statement.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Break:
        start: 0
        end: 6
