crates/atlas-runtime/tests/snapshots/parser_tests__continue_statement.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Continue:
        start: 0
        end: 9
