crates/atlas-runtime/tests/snapshots/parser_tests__division.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Binary:
            op: Div
            left:
              Literal:
                - Number: 10
                - start: 0
                  end: 2
            right:
              Literal:
                - Number: 2
                - start: 5
                  end: 6
            span:
              start: 0
              end: 6
        span:
          start: 0
          end: 7
