crates/atlas-runtime/tests/snapshots/parser_tests__empty_array.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          ArrayLiteral:
            elements: []
            span:
              start: 0
              end: 2
        span:
          start: 0
          end: 3
