crates/atlas-runtime/tests/snapshots/parser_tests__equality.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Binary:
            op: Eq
            left:
              Literal:
                - Number: 1
                - start: 0
                  end: 1
            right:
              Literal:
                - Number: 2
                - start: 5
                  end: 6
            span:
              start: 0
              end: 6
        span:
          start: 0
          end: 7
